chore[xxx] updated Method